# Lookback

./: .gitignore  .npmrc  Cargo.toml  README.md  README_ja.md  biome.json  ignore-quarantine.sh  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.setup.ts
.github/: actionlint.yaml
.github/workflows/: release.yml
docs/: developer-guide.md  developer-guide_ja.md
scripts/: build-release.sh  ci-apply-release-version.mjs  ci-free-disk-space.sh  ci-stage-placeholders.sh  diff-memories-singles.sh  run-tauri.sh  stage-dev-external-bins.sh  stage-memory-kind-toolkit.sh  sync-memories-prompts.sh  test-appimage-hooks.sh  test-build-deps-features.sh  test-build-lindera.sh  test-build-release-cuda-driver-stub.sh  test-build-release-macos-signing.sh  test-build-release-tauri-verbose.sh  test-ci-apply-release-version.sh  test-ci-free-disk-space.sh  test-gitea-cuda-release-upload.sh  test-protoc-fetch.sh  test-release-workflow.sh  test-run-tauri.sh  test-stage-dev-external-bins.sh
scripts/lib/: appimage-hooks.sh  build-common.sh  build-deps.sh  build-lindera.sh  protoc-fetch.sh
src/: App.tsx  main.tsx  test-utils.tsx  viteWatchConfig.test.ts  workers.summaryBoundary.test.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migration-toolkit/: lookback-migration-guide_ja.md  memory-kind-client-migration_ja.md  vectordb-rebuild-runbook_ja.md
src-tauri/src/: crashtrace.rs  error.rs  lib.rs  lindera.rs  main.rs  maintenance.rs  plugins.rs  serde_id.rs
src-tauri/src/commands/: analysis_dispatch.rs  app_settings.rs  apply_settings.rs  background_jobs.rs  chat.rs  connection.rs  embedding_presets.rs  embedding_settings.rs  embedding_workers_yaml.rs  embeddings.rs  import.rs  llm_presets.rs  llm_settings.rs  logs.rs  mcp_settings.rs  mod.rs  model.rs  periodic_execution.rs  periodic_tasks.rs  personality.rs  recovery.rs  reflection_dispatch.rs  reflections.rs  search.rs  settings.rs  setup.rs  summaries.rs  threads.rs
src-tauri/src/data/: fsutil.rs  mod.rs  paths.rs
src-tauri/src/grpc/: mod.rs
src-tauri/src/grpc/proto/: mod.rs
src-tauri/src/jobworkerp/: embedding.rs  llm_chat.rs  maintenance.rs  mod.rs
src-tauri/src/sidecar/: generation_workers.rs  lifecycle.rs  memory_kind_gate.rs  mod.rs  ports.rs  reaper.rs  startup_error.rs
src-tauri/tests/: chat_agent_loop_e2e.rs  llm_chat_streaming_spike.rs  lookback_recall_e2e.rs  purge_e2e.rs  sidecar_lifecycle.rs  streaming_dispatch_e2e.rs
src-tauri/tests/common/: mod.rs
src-tauri/tests/fixtures/: memories_startup_error_config_load_failed.json  memories_startup_error_embedding_dimension_mismatch.json  memories_startup_error_env_var_invalid.json  memories_startup_error_lancedb_init_failed.json  memories_startup_error_lancedb_schema_mismatch.json  memories_startup_error_media_config_conflict.json  memories_startup_error_other.json  memories_startup_error_rdb_pool_init_failed.json
src/api/: index.test.ts  index.ts
src/components/: AnalysisProgress.tsx  BootError.test.tsx  BootError.tsx  BootScreen.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  DateInput.test.tsx  DateInput.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  ImportDialog.test.tsx  ImportDialog.tsx  ImportToast.test.tsx  ImportToast.tsx  LabelFilter.test.tsx  LabelFilter.tsx  MarkdownMessage.test.tsx  MarkdownMessage.tsx  MemoryRefs.tsx  Modal.tsx  SetupWizard.test.tsx  SetupWizard.tsx  Sidebar.i18n.test.tsx  Sidebar.test.tsx  Sidebar.tsx  SummaryBody.test.tsx  SummaryBody.tsx  SummaryCalendar.test.tsx  SummaryCalendar.tsx  SummaryGenerateDialog.test.tsx  SummaryGenerateDialog.tsx  ThreadDetail.test.tsx  ThreadDetail.tsx  Toolbar.tsx  VectorDegradedBanner.test.tsx  VectorDegradedBanner.tsx
src/hooks/: useDeleteAction.ts  useEscape.ts  useGeneratedRefresh.test.ts  useGeneratedRefresh.ts  useImportProgress.test.ts  useImportProgress.ts  useImportRefresh.test.ts  useImportRefresh.ts  useLabelSelection.test.ts  useLabelSelection.ts  useLocale.test.tsx  useLocale.ts  useLocaleTag.ts  useRagChat.test.ts  useRagChat.ts  useReflectionProgress.ts  useSettingsDirty.test.tsx  useSettingsDirty.ts  useSidecarStatus.test.ts  useSidecarStatus.ts  useStepStreamProgress.test.ts  useStepStreamProgress.ts  useStickToBottom.test.ts  useStickToBottom.ts  useTauriEvent.ts  useTheme.ts  useTimezone.test.tsx  useTimezone.ts
src/i18n/: dict.test.ts  index.ts
src/lib/: chatSourceNav.test.ts  chatSourceNav.ts  codexMemoryVisibility.test.ts  codexMemoryVisibility.ts  dateInput.test.ts  dateInput.ts  errorMessage.test.ts  errorMessage.ts  generatedRefresh.test.ts  generatedRefresh.ts  labelPrefix.test.ts  labelPrefix.ts  locale.purge.test.ts  locale.test.ts  locale.ts  localeFormat.test.ts  localeFormat.ts  periodicTask.test.ts  periodicTask.ts  personaStats.test.ts  personaStats.ts  plainImport.ts  (+22 more)
workers/: README.md  function-sets.yaml  llm-workers.yaml
(+66 files in other folders)
