[workspace]
resolver = "3"
members = ["src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["sutr"]
description = "Lookback — Tauri MVP for memories session log browsing"
license = "Apache-2.0"

[workspace.dependencies]
# Tauri v2
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

# async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
async-trait = "0.1"

# gRPC
tonic = { version = "0.14", features = ["transport", "tls-ring", "tls-native-roots"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tonic-health = "0.14"
tonic-reflection = "0.14"
prost = "0.14"
prost-types = "0.14"
# Match tonic's ring TLS backend; only used to install the CryptoProvider
# before the first https handshake (see src/grpc/mod.rs).
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }

# Logging / errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Misc
once_cell = "1"
parking_lot = "0.12"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
which = "8"
dotenvy = "0.15"
rusqlite = "0.32"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
